logout e csrf
